pantallas verticales y horizontales

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,12 @@
 <resources>
 
     <string name="app_name">Asteroides</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Asteroides</string>
     <string name="action_settings">Settings</string>
+    <string name="tituloAplicacion">Asteroides</string>
+    <string name="Arrancar">Jugar</string>
+    <string name="Configurar">Configurar</string>
+    <string name="Acercade">Acerca de</string>
+    <string name="Salir">Salir</string>
 
 </resources>
